# scan-car-plate

./: .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  README.md  pyproject.toml  ruff.toml
.dvc/: config
conf/: config.yaml
conf/data/: data.yaml
conf/data/transforms/: resize_norm.yaml
conf/logging/: logging.yaml
conf/model/: fastrcnn_mobilenet.yaml
conf/model/metrics/: map.yaml
conf/model/optimizer/: adamw.yaml
data/datasets/: .gitignore  car_plate_detect.dvc
scan_car_plate/: module.py  train.py
scan_car_plate/data_modules/: car_numbers_data.py  plates.py  transforms.py
scan_car_plate/models/: fastrcnn_mobilenet.py
scan_car_plate/utilites/: data_utils.py  dvc_utils.py  metrics_utils.py
