[tool.poetry]
name = "scan-car-plate"
version = "0.1.0"
description = ""
authors = ["MrASK2024 <askrasiukov@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
transformers = ">=4.57.1,<5.0.0"
seaborn = ">=0.13.2,<0.14.0"
numpy = ">=1.23,<2.0"
lightning = ">=2.6.0,<3.0.0"
tensorboard = ">=2.20.0,<3.0.0"
hydra-core = ">=1.3.2,<2.0.0"
mlflow = ">=3.8.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
dvc = {extras = ["s3"], version = ">=3.64.0,<4.0.0"}
ruff = ">=0.14.10,<0.15.0"
pre-commit = ">=4.5.1,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"